# titra

./: .gitignore  Cargo.toml  Daniel 2024-12.xlsx  LICENSE  db.sqlite
.github/workflows/: release.yml  rust.yml
src/: main.rs  state.rs  titra.rs
src/export/: excel.rs  mod.rs
src/extensions/: mod.rs  naive_date_ext.rs
src/i18n/: de.json  mod.rs
src/model/: date_range.rs  error.rs  mod.rs  time_entry.rs
src/storage/: cache.rs  error.rs  migrate.rs  mod.rs  null.rs  sqlite.rs
src/user/: mod.rs
src/views/: add_entry.rs  export.rs  failed.rs  loading.rs  mod.rs  overview.rs  overview_table.rs  scaffold.rs  select_date_range.rs  time_edit.rs  time_entry_edit.rs
