[package]
edition = "2021"
name = "titra"
version = "0.1.0"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["datepicker"] }
env_logger = "0.11.6"
fallible-iterator = "0.3.0"
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
rust_xlsxwriter = {version = "0.80.0", features = ["chrono"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.9"
